<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel"/>
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding"
            app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/representatives_search_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_padding">

            <TextView
                    android:id="@+id/search_title"
                    style="@style/section_title_style"
                    android:text="@string/representative_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/address_line_1"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.line1}"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title"/>

            <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:hint="@string/address_line_2"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.line2}"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1"/>

            <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.city}"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2"/>

            <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints=""
                    android:entries="@array/states"
                    android:inputType="textPostalAddress"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city"
                    app:stateValue="@{viewModel.address.state}"/>

            <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={viewModel.zip}"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_my_representatives"
                    app:layout_constraintTop_toBottomOf="@id/zip"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_my_location"
                    app:layout_constraintTop_toBottomOf="@id/button_search"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/my_representatives_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representatives_search_section">

            <TextView
                    android:id="@+id/representative_title"
                    style="@style/section_title_style"
                    android:text="@string/my_representatives"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                    android:id="@+id/no_data_hint_group"
                    viewVisibility="@{!viewModel.networkNotAvailable}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/my_representatives_section"
                    app:layout_constraintEnd_toEndOf="@id/my_representatives_section"
                    app:layout_constraintStart_toStartOf="@id/my_representatives_section"
                    app:layout_constraintTop_toTopOf="@id/my_representatives_section">

                <TextView
                        android:id="@+id/no_data_hint1"
                        style="@style/no_data_hint_style"
                        android:layout_gravity="center"
                        android:text="@string/nothing_here_yet"/>

                <TextView
                        android:id="@+id/no_data_hint2"
                        style="@style/no_data_hint_style"
                        android:layout_gravity="center"
                        android:text="@string/search_for_your_representatives"/>

            </LinearLayout>

            <ImageView
                    android:id="@+id/connection_error_image"
                    viewVisibility="@{viewModel.networkNotAvailable}"
                    android:layout_width="@dimen/loading_indicator_dimens"
                    android:layout_height="@dimen/loading_indicator_dimens"
                    android:layout_marginTop="@dimen/padding_4dp"
                    android:contentDescription="@string/connection_error"
                    android:src="@drawable/ic_connection_error"
                    app:layout_constraintBottom_toBottomOf="@id/my_representatives_section"
                    app:layout_constraintEnd_toEndOf="@id/my_representatives_section"
                    app:layout_constraintStart_toStartOf="@id/my_representatives_section"
                    app:layout_constraintTop_toTopOf="@id/my_representatives_section"/>

            <ImageView
                    android:id="@+id/loading_representatives_image"
                    android:layout_width="@dimen/loading_indicator_dimens"
                    android:layout_height="@dimen/loading_indicator_dimens"
                    android:contentDescription="@string/loading_data"
                    android:src="@drawable/loading_animation"
                    viewVisibility="@{!viewModel.networkNotAvailable}"
                    app:layout_constraintBottom_toBottomOf="@id/my_representatives_section"
                    app:layout_constraintEnd_toEndOf="@id/my_representatives_section"
                    app:layout_constraintStart_toStartOf="@id/my_representatives_section"
                    app:layout_constraintTop_toTopOf="@id/my_representatives_section"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/representatives_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/default_padding"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/representative_title"
                    tools:itemCount="10"
                    tools:listitem="@layout/representative_item"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>