<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.politicalpreparedness.MainActivity">


        <!-- image for home screen logo. -->
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ballot_logo"
                android:id="@+id/imageView"
                android:contentDescription="@string/home_screen_logo_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/representative_button"
                app:layout_constraintVertical_bias="0.531"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        <!-- Button to navigate to representatives. -->
        <Button
                android:text="@string/upcoming_elections_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/representative_button"
                android:contentDescription="@string/upcoming_elections_text"
                app:layout_constraintBottom_toTopOf="@+id/upcoming_button"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:background="@color/background_color"
                android:textColor="@color/white"/>

        <!-- Button to navigate to upcoming elections. -->
        <Button
                android:text="@string/find_my_representatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upcoming_button"
                android:contentDescription="@string/find_my_representatives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginRight="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@color/background_color"
                android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>