<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="voterInfoViewModel"
                  type="com.example.android.politicalpreparedness.election.VoterInfoViewModel"/>

        <variable name="election"
                  type="com.example.android.politicalpreparedness.network.models.Election"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.politicalpreparedness.MainActivity">


        <!--        <androidx.appcompat.widget.Toolbar-->
        <!--                android:id="@+id/election_name"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:padding="@dimen/default_padding"-->
        <!--                android:singleLine="true"-->
        <!--                app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp"-->
        <!--                android:layout_marginTop="16dp"/>-->
        <ImageView
                android:id="@+id/loading_voter_info_image"
                android:layout_width="@dimen/loading_indicator_dimens"
                android:layout_height="@dimen/loading_indicator_dimens"
                android:contentDescription="@string/loading_data"
                android:src="@drawable/loading_animation"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/election_date"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:electionDateText="@{election}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="12 November 2055"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/state_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:text="@string/voter_information_text"
                app:layout_constraintTop_toBottomOf="@id/election_date"
                app:layout_constraintStart_toStartOf="@id/election_date" android:textStyle="bold"
                android:layout_marginStart="4dp"/>
        <TextView
                android:id="@+id/state_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voting_locations"
                android:enabled="@{voterInfoViewModel.hasVotingLocationsInformation}"
                android:onClick="@{() -> voterInfoViewModel.openVotingLocationsUrl()}"
                app:layout_constraintTop_toBottomOf="@id/state_header"
                app:layout_constraintStart_toStartOf="@id/election_date" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/state_ballot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{voterInfoViewModel.hasBallotInformation}"
                android:onClick="@{() -> voterInfoViewModel.openBallotInfoUrl()}"
                android:text="@string/ballot_information"
                app:layout_constraintTop_toBottomOf="@+id/state_locations"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintBottom_toTopOf="@+id/toggle_follow_button"
                app:layout_constraintVertical_bias="0.016"/>
        <androidx.constraintlayout.widget.Group
                android:id="@+id/address_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="state_correspondence_header,address"/>

        <TextView
                android:id="@+id/state_correspondence_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/state_ballot"
                app:layout_constraintStart_toStartOf="@id/election_date"/>

        <TextView
                android:id="@+id/address"
                android:text="@{voterInfoViewModel.correspondenceAddress}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
                app:layout_constraintStart_toStartOf="@id/election_date"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_follow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> voterInfoViewModel.toggleFollowElection()}"
                android:text="@{voterInfoViewModel.buttonText}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/follow_election"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>